fix security csrf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.mvc.view.prefix =/WEB-INF/jsp/
 spring.mvc.view.suffix =.jsp
 security.basic.enable= false 
+security.enable.csrf=false
 management.security.enabled= false
 
 
